--- a/views/templates/documents.html
+++ b/views/templates/documents.html
@@ -43,7 +43,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">{{document.title}}</h4>
-              {{document.comments}}
+              {{document.synopsis}}
             </div>
           </div>
         {% else %}
